# task-manifold-geometry

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/exp1_task/: README.md  run.py
experiments/exp1_task/outputs/: arc_complexity_comparison.csv  controlled_comparison.csv  seed_results.csv  seed_summary.csv
experiments/exp2_capacity/: README.md  run.py
experiments/exp2_capacity/outputs/: budget_sweep_failed_architectures.csv  budget_sweep_results.csv  budget_sweep_summary.csv  seed_750_back_uniform_results.csv  seed_750_back_uniform_summary.csv  single_budget_1000_results.csv  single_budget_1000_summary.csv
experiments/exp3_trajectory/: README.md  run.py
experiments/exp3_trajectory/outputs/: sinewave_absolute_change.csv  sinewave_delta_change.csv  sinewave_delta_summary.csv  sinewave_final_absolute_change.csv  sinewave_layerwise_by_scheme_seed.csv  sinewave_layerwise_summary.csv  spiral_absolute_change_by_seed_layer.csv  spiral_delta_change_by_seed_transition.csv  spiral_delta_summary_by_transition.csv  spiral_final_absolute_change_by_seed.csv  spiral_layerwise_by_seed.csv  spiral_layerwise_summary.csv  spiral_logit_seed_comparison.csv
src/representation_geometry/: __init__.py  plotting.py  probes.py  runner.py
src/representation_geometry/experiments/: exp1_task.py  exp2_capacity.py  exp3_trajectory.py
src/task_manifold_geometry/: __init__.py  architecture.py  models.py  targets.py  worlds.py
src/task_manifold_geometry/experiments/: __init__.py  exp1_task.py  exp2_capacity.py  exp3_trajectory.py
