[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-manifold-geometry"
version = "0.1.0"
description = "Experiments on how task structure, capacity, and depth govern learned representation geometry."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
